--- a/dynamic-form/src/lgx-react-components/title-bar/title-bar.component.css
+++ b/dynamic-form/src/lgx-react-components/title-bar/title-bar.component.css
@@ -7,5 +7,8 @@
 
 .title-bar-title {
   margin: 0px;
-  margin-top: 8px;
+  margin-top: 4px;
+  color: #3f51b5;
+  font-size: 20px;
+  font-weight: 400;
 }
