--- a/dynamic-form/src/index.css
+++ b/dynamic-form/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.title {
+  font-weight: 400;
+}
