--- a/dynamic-form/src/index.css
+++ b/dynamic-form/src/index.css
@@ -13,14 +13,28 @@ code {
 }
 
 .row {
-  width: 100%;
   display: flex;
-  flex-wrap: wrap;
   align-content: center;
   justify-content: center;
   margin: 20px 0;
 }
 
+.button {
+  color: #fff;
+  background-color: #3f51b5;
+  min-height: 30px;
+  min-width: 100px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+
 .title {
-  font-weight: 400;
+  font-weight: 600;
+  margin: 20px 10px;
+  color: #3f51b5;
+}
+
+pre {
+  margin: 0;
 }
