--- a/dynamic-form/src/index.css
+++ b/dynamic-form/src/index.css
@@ -12,14 +12,20 @@ code {
     monospace;
 }
 
-.row {
+.lgx-row {
   display: flex;
-  align-content: center;
-  justify-content: center;
   margin: 20px 0;
 }
 
-.button {
+.align-center {
+  align-content: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.lgx-button {
   color: #fff;
   background-color: #3f51b5;
   min-height: 30px;
@@ -29,12 +35,18 @@ code {
   cursor: pointer;
 }
 
+.lgx-button:hover {
+  background-color: #1a237e;
+}
+
 .title {
   font-weight: 600;
   margin: 20px 10px;
   color: #3f51b5;
+  font-size: 20px;
 }
 
 pre {
-  margin: 0;
+  margin: 0 !important;
+  font-size: 14 !important;
 }
